# projects

./: README.md
kmu-grundschutz/: README.md  package-lock.json  package.json
kmu-grundschutz/infra/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
kmu-grundschutz/web/app/app/: layout.tsx  page.tsx
kmu-grundschutz/web/app/app/controls/: page.tsx
kmu-grundschutz/web/app/app/monitoring/: page.tsx
kmu-grundschutz/web/app/app/reports/: page.tsx
kmu-grundschutz/web/app/app/settings/: page.tsx
kmu-grundschutz/web/app/app/threats/: page.tsx
kmu-grundschutz/web/app/app/wizard/: page.tsx
kmu-grundschutz/worker/: package.json
kmu-grundschutz/worker/src/: config.ts  index.ts  llm.ts  mailer.ts  mapping-rules.ts  prisma.ts  queue.ts
kmu-grundschutz/worker/src/ingest/: bsi.ts  hibp.ts  nvd.ts  rss.ts
kmu-grundschutz/worker/src/jobs/: ingest-threats.ts  leak-check.ts  process-threat.ts
kmu-grundschutz/worker/src/scripts/: generate-summaries.ts  remap-threats.ts  reset-and-ingest.ts
md-translator-cli/: README.de.md  README.md  deutsch.md  english.md  output.md  pyproject.toml
md-translator-cli/src/md_translator_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
md-translator-cli/src/translate_md/: cli.py
yt-summarizer-cli/: README.de.md  README.md  requirements.txt  setup.py
yt-summarizer-cli/tests/: __init__.py  test_formatter.py  test_llm_client.py  test_transcript.py
yt-summarizer-cli/youtube_summarizer/: __init__.py  cli.py  formatter.py  llm_client.py  transcript.py
(+8 files in other folders)
